@@ -10,6 +10,7 @@ src/std.lnt
 ^\.Rproj\.user$
 CONTRIBUTING.md
 .*\.tar.gz$
-GPATH
-GRTAGS
-GTAGS
+^GPATH
+^GRTAGS
+^GTAGS
+^docker
